--- a/styles/general.css
+++ b/styles/general.css
@@ -12,5 +12,10 @@ body {
     font-family: "Raleway", sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
+html{
+    scroll-behavior: smooth;
+    scroll-padding-bottom: 5rem;
+}
